examples/errors/part2_semantic1_attribution_valid.lya
dcl a int;
a = 2; //OK